# wifi-analyzer

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  output_example.txt  wifi_scan_res.proto
components/protobuf/: CMakeLists.txt  wifi_scan_res.pb-c.c
components/protobuf/include/: wifi_scan_res.pb-c.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
components/wifi_scanner/: CMakeLists.txt  wifi_scanner.c
components/wifi_scanner/include/: wifi_scanner.h
main/: CMakeLists.txt  main.c  wifi-analyzer.c
